# everything-of-rust-lora

./: .gitignore  README.md  pyproject.toml  run_pipeline.ps1  run_pipeline.sh  train_granite.py  train_nemotron3_nano.py  train_qwen.py
config/: libraries.yaml  sources.yaml  training.yaml
scripts/: 01_collect_rust_book.py  02_collect_docs_rs.py  03_collect_github.py  04_collect_esp_rs.py  05_collect_blogs.py  06_transform_data.py  07_vector_store.py  08_create_dataset.py  09_export_ollama.py  cache_utils.py
